tests/paczka2/big_fuzzy/38811874.err
Error in line 9: 4WBNyLKAT7s S211 35,9
Error in line 18: M1CvgZUFF S20 70,5
Error in line 24: totKTwyM S211 12,2
Error in line 27: 91qdJDZG S211 77,7
Error in line 36: 91qdJDZG S20 0,94
Error in line 37: S130 S211 -1,3
Error in line 26: 4WBNyLKAT7s S130 32,0
Error in line 30: 91qdJDZG S20 5,5
Error in line 44: 4WBNyLKAT7s S931 -2,6
Error in line 46: S130 S20 37,5
Error in line 42: 4WBNyLKAT7s S931 35,6
Error in line 47: S130 S130 39,7
Error in line 50: S130 S20 6,2
Error in line 58: iMYDLugG S20 55,1
Error in line 79: iMYDLugG S130 49,7
Error in line 82: Gh3t4SPTu S931 48,2
Error in line 68: totKTwyM S130 183,7
Error in line 74: M1CvgZUFF S211 39,1
Error in line 115: 91qdJDZG S211 64,3
Error in line 116: iMYDLugG S931 36,5
Error in line 129: 4WBNyLKAT7s S130 15,7
Error in line 122: M1CvgZUFF S931 62,6
Error in line 130: iMYDLugG S211 79,4
Error in line 136: 91qdJDZG S931 41,5
Error in line 132: M1CvgZUFF S130 27,7
Error in line 145: 91qdJDZG S211 7,7
Error in line 106: totKTwyM S931 141,2
Error in line 155: totKTwyM S130 96,8
Error in line 161: iMYDLugG S931 89,2
Error in line 162: totKTwyM S130 9,3
Error in line 169: Gh3t4SPTu S211 93,8
Error in line 163: iMYDLugG S20 27,4
Error in line 176: iMYDLugG S20 96,2
Error in line 171: Gh3t4SPTu S130 87,7
Error in line 166: totKTwyM S931 86,7
Error in line 191: 91qdJDZG S130 21,7
Error in line 202: Gh3t4SPTu S211 54,0
Error in line 207: M1CvgZUFF S13q 51,2
Error in line 214: 4WBNyLKAT7s S211 71,3
Error in line 220: 91qdJDZG S20 194,72
Error in line 224: M1CvgZUFF S20 122,2
Error in line 227: 91qdJDZG S20 2,1
Error in line 234: 91qdJDZG S931 80,81
Error in line 237: 91qdJDZG S931 258,7
Error in line 241: Gh3t4SPTu S931 89,1
Error in line 243: 91qdJDZG S20 47,8
